# FAMAB

./: .gitignore  CMakeLists.txt  Makefile  README.md  benchmark.cpp  benchmark_variables.h  cmake_install.cmake  filter_basic_benchmarks.sh  filter_exp3_benchmarks.sh  filter_fpl_benchmarks.sh  filter_tsallis_benchmarks.sh  main.cpp  optimal_parameter_finder.cpp  process_benchmarks.sh  run_benchmark.sh  run_generic.sh  runner.h
algorithms/: BanditConfigurator.cpp  DExp3.cpp  DExp3.h  Exp3.cpp  Exp3.h  Exp31.h  Exp3Bandit.cpp  Exp3Bandit.h  Exp3RewardStrategy.cpp  Exp3RewardStrategy.h  Exp3m.cpp  Exp3m.h  FPL.cpp  FPL.h  IBandit.h  IRewardStrategy.cpp  IRewardStrategy.h  IWeightStrategy.cpp  IWeightStrategy.h  Uniformbandit.h  VectorWeightStrategy.cpp  VectorWeightStrategy.h
algorithms/DEXP/: DExp3.cpp  DExp3.h  Exp31.h
algorithms/Exp3Bandit/: Exp3.1_optimized.h  Exp3.cpp  Exp3.h  Exp31.cpp  Exp31.h  Exp3Bandit.h  Exp3IXTor.cpp  Exp3IXTor.h  Exp3IXTorRewardStrategy.h  Exp3Light.cpp  Exp3Light.h  Exp3LightHeap.cpp  Exp3LightHeap.h  Exp3RewardStrategy.h  Exp3Tor.cpp  Exp3Tor.h  Exp3TorRewardStrategy.h  Exp3VectorWeightStrategy.cpp  Exp3VectorWeightStrategy.h  Exp3_average.h  Exp3_deferred.h  Exp3_fid.h  Exp3_heap.h  Exp3_lad.h  VectorWeightStrategy.cpp  VectorWeightStrategy.h  exp3r.h
algorithms/Exp3m/: DepRoundALIASStrategy.cpp  DepRoundALIASStrategy.h  Exp31m.h  Exp31m_2.h  Exp3light_m_heap.h  Exp3m.h  Exp3m_heap.h
algorithms/FPL/: FPL.h  FPLVectorWeightStrategy.cpp  FPLVectorWeightStrategy.h  FPL_buckets.h  FPL_hash.h  FPL_toplog.h  FPL_unnormalized.h  FPL_weightless.h  NaiveRandomGenStrategy.cpp  NaiveRandomGenStrategy.h  QBL.h  VectorWeightStrategy.cpp  VectorWeightStrategy.h
algorithms/RBA/: IBA.h  RBA.h
algorithms/Tsallis-INF/: IW.h  RV.h  TsallisINF.cpp  TsallisINF.h  TsallisIW.h  TsallisRV.h  Tsallis_Heap.h  Tsallis_IW.h  Tsallis_LTU.h  Tsallis_RV.h  Tsallis_approx_rv.h  Tsallis_optimized.h
algorithms/UCB/: UCB1.h
algorithms/utilities/: weight_exporter.cpp
benchmarks/: Exp3.1.h  Exp3.h  Exp3_dum.h  Exp3_heap.h  Exp3ixtor.h  Exp3m.h  FPL.h  FPL_H.h  FPL_toplog.h  Policy.h  QBL.h  Tsallis_iw.h  exp3light.h  exp3lightheap.h
datasets/: Dataset_movielens.cpp  Dataset_movielens.h  IDataset.h  data_generators.h  dataloaders.cpp  dataloaders.h  dataset_explore_no_more.h  dataset_simple_adversarial.h  dataset_simple_stochastic.h  dataset_theoretical_bounds.h  debug_simple_adversarial.cpp  debug_simple_adversarial.h  debug_simple_stochastic.cpp  debug_simple_stochastic.h
datasets/debug/: debug_simple_adversarial.h  debug_simple_stochastic.cpp  debug_simple_stochastic.h
datastructures/: Incremental_LSE_sum_heap.h  Incremental_cnt_sum_heap.h  Incremental_product_heap.h  Incremental_sum_heap.h  max_heap.h
experiments/: AdversarialExperimentRunner.h  DuelArena.h  Exp3ComparisonRunner.h  ExploreNoMoreRunner.h  FPLComparisonRunner.h  GenericBanditRunner.h  TheoreticalBoundRunner.h  TsallisComparisonRunner.h  TsallisExperimentRunner.h
experiments/exp3/: exp3_mod2.cpp  mod2.cpp
experiments/experiment_specifications/: generic_adversarial.sh  generic_movielens.sh
experiments/experiment_specifications/AdversarialExperiments/: run_adversarial.sh  run_adversarial_exp3.sh  run_adversarial_exp3m.sh  run_adversarial_fpl.sh  run_adversarial_tsallis.sh
experiments/experiment_specifications/GenericBanditRunner/: generic_adversarial.sh  generic_movielens.sh
experiments/experiment_specifications/TsallisExperiments/: run_tsallis.sh  run_tsallis_exp3.sh  run_tsallis_exp3m.sh
experiments/fpl/: fpl_mod2.cpp
main-support/: main_cases.h
plotting/: benchmark.py  colors.py  plot_Explore_No_More.py  plot_adversarial.py  plot_adversarial_exp3m.py  plot_compare.py  plot_exp3_adversarial.py  plot_exp3_tsallis.py  plot_regret.py  plot_theoretical_strong_regret_T_single.py  plot_theoretical_strong_regret_k_single.py  plot_theoretical_weak_regret_T_fid_comparison.py  plot_theoretical_weak_regret_T_lad_comparison.py  plot_theoretical_weak_regret_T_single.py  plot_theoretical_weak_regret_k_fid_comparison.py  plot_theoretical_weak_regret_k_lad_comparison.py  plot_theoretical_weak_regret_k_single.py  plot_tsallis.py  plot_tsallis_exp3m.py  plot_weights.py
utilities/: argsort.cpp  argsort.h  chaosmaps.h  eta_mean_std_writer.h  exec_command.h  random_gen.h  result_writer.h  standard_deviation.cpp  sum_of_range.h  updateable_priority_queue.h  weight_exporter.cpp
